# pixez-flutter

./: .flutter-plugins-dependencies  .fvmrc  .gitignore  .metadata  1.json  New-MsixCert.ps1  README.md  analysis_options.yaml  comment_element.html  comment_emoji2map.py  i18nconfig.json  l10n.yaml  local.properties  pubspec.yaml  to_lower.dart  user_preview.json
.github/: FAQ.md  README_en.md  README_id.md  windows-uri.md
.github/board/: android.json
.github/preview/: 1.avif  2.avif
.github/workflows/: build.yaml  build_ios.yml  build_windows.yml  main.yml
android/: .gitignore  .project  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
android/androidndkgif/: build.gradle.kts
android/androidndkgif/src/main/cpp/: BaseGifEncoder.cpp  BaseGifEncoder.h  BitWritingBlock.cpp  BitWritingBlock.h  BitmapIterator.cpp  BitmapIterator.h  CMakeLists.txt  DataBlock.cpp  DataBlock.h  EncodingType.h  FastGifEncoder.cpp  FastGifEncoder.h  GCTGifEncoder.cpp  GCTGifEncoder.h  GifDecoder.cpp  GifDecoder.h  GifEncoder.cpp  GifEncoder.h  GifFrame.cpp  GifFrame.h  LCTGifEncoder.cpp  LCTGifEncoder.h  SimpleGCTEncoder.cpp  SimpleGCTEncoder.h  com_waynejo_androidndkgif_GifDecoder.cpp  com_waynejo_androidndkgif_GifDecoder.h  com_waynejo_androidndkgif_GifEncoder.cpp  com_waynejo_androidndkgif_GifEncoder.h
android/app/: .project  build.gradle  build.gradle.kts  debug-key.keystore  release-key.keystore
android/weiss/: .project  build.gradle
assets/json/: host.json  recent_message.json
gradle/wrapper/: gradle-wrapper.properties
i18n/: en-US.json  zh-CN.json
integration_test/: app_test.dart
ios/: .gitignore  Podfile  TinkerExtension.entitlements
lib/: app_widget_plugin.dart  clipboard_plugin.dart  clipboard_utils.dart  constants.dart  constraint.dart  crypto_plugin.dart  custom_icon.dart  custom_tab_plugin.dart  deep_link_plugin.dart  document_plugin.dart  exts.dart  fluent_app.dart  fluent_app_state.dart  fluent_main.dart  fluentui.dart  generated_plugin_registrant.dart  i18n.dart  js_eval_plugin.dart  main.dart  material_app_state.dart  my_fluent_app.dart  open_setting_plugin.dart  paths_plugin.dart  platform_spec.dart  saf_plugin.dart  secure_plugin.dart  single_instance_plugin.dart  supportor_plugin.dart  utils.dart  weiss_plugin.dart  widgetkit_plugin.dart  win32_plugin.dart  win32_utils.dart  windows.dart
linux/: .gitignore  CMakeLists.txt  my_application.cc
macos/: .gitignore
ohos/: build-profile.json5  oh-package.json5
plugins/rhttp/rhttp/rust/: Cargo.toml
plugins/rhttp/rhttp/rust/src/: frb_generated.rs
plugins/rhttp/rhttp/rust/src/api/: client.rs  error.rs  http.rs  init.rs  stream.rs
plugins/rhttp/rhttp/rust/src/utils/: socket_addr.rs
plugins/rhttp/rust/: Cargo.toml
plugins/rhttp/rust/src/: frb_generated.rs  lib.rs
plugins/rhttp/rust/src/api/: client.rs  http.rs  init.rs  mod.rs
plugins/rhttp/rust/src/utils/: mod.rs
test/: widget_test.dart
windows/: .gitignore  CMakeLists.txt  Install-PixEzProtocol.ps1  deploy.dart  registry.ps1
(+1086 files in other folders)
