[package]
name = "rhttp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
base64 = "0.22.1"
chrono = "0.4.44"
flutter_rust_bridge = { version = "=2.12.0", features = ["chrono"] }
futures-util = "0.3.32"
rustls = "0.23.37"
rustls-platform-verifier = "0.6.2"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-util = "0.7.18"

[dependencies.reqwest]
version = "0.13.2"
default-features = false
features = [
    "charset",
    "cookies",
    "form",
    "http2",
    "http3",
    "query",
    "rustls",
    "stream",
    "multipart",
    "socks",

    # Compression
    "brotli",
    "gzip",
]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 3
strip = true
panic = "abort"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 3
panic = "abort"
